	requested by Mike Pater (SF #1655951)
	* common/gtk/metaserver.c, common/gtk/metaserver.h,
	common/gtk/Makefile.am, server/gtk/main.c, client/gtk/connect.c:
	Easier selection for meta servers (by using a combo box)
	* docs/pioneers-meta-server.6, meta-server/main.c: When -p is not
	specified, the meta server will not be able to create games.

2008-03-12  Roland Clobus <rclobus@bigfoot.com>
	* server/gtk/main.c, server/player.c, server/server.c, server/server.h,
	server/main.c, server/admin.c, client/ai/ai.c: Make all names for the
	computer players unique.
	Based on a patch by chrysn@users.sourceforge.net

2008-02-13  Roland Clobus <rclobus@bigfoot.com>
	* server/turn.c, server/admin.c, server/admin.h: Added 'admin
	fix-dice' to fix the dice roll.
	* editor/gtk/pioneers-editor.desktop ->
	editor/gtk/pioneers-editor.desktop.in, editor/gtk/Makefile.am,
	configure.ac, server/gtk/pioneers-server.desktop ->
	server/gtk/pioneers-server.desktop.in, server/gtk/Makefile.am,
	Makefile.am, po/POTFILES.in, client/gtk/data/pioneers.desktop ->
	client/gtk/pioneers.desktop.in, client/gtk/data/Makefile.am,
	client/gtk/Makefile.am: Added i18n support for *.desktop files.
	pioneers.desktop had to be moved, to keep 'make distcheck' happy.
	* po/POTFILES.skip: Added the very old, unmaintained admin-gtk.c to
	the list of excluded files for i18n.
	* common/network.c: Only use AF_UNSPEC (instead of PF_UNSPEC too).

2008-01-22  Roland Clobus <rclobus@bigfoot.com>
	* client/help/C/Makefile.am: Create Yelp like output.
	* client/help/C/pioneers.xml: Add index to the FAQ entries.
	* common/state.c, common/state.h: More stack information for push and
	pop.
	* server/player.c: When reviving a player that was previously
	reconnecting, do not push an extra mde_pre_game, otherwise an assert
	will be triggered.
	* editor/gtk/editor.c, common/buildrec.h, common/map_query.c,
	common/gtk/guimap.c, common/game.c, common/map.c, common/map.h,